--- a/src/app/pop-up/pop-up.component.html
+++ b/src/app/pop-up/pop-up.component.html
@@ -29,10 +29,15 @@
               <p *ngIf="!service.getflag()" class="card-text">{{service.getSelectedBook().Published}}</p>
 
               <mat-form-field *ngIf="service.getflag()" class="example-full-width">
-                <input type="date" max="2018-09-25" matInput placeholder formControlName="Published" value={{service.getSelectedBook().Published}}>
+                <input  type="date" required matInput placeholder  formControlName="Published" value={{service.getSelectedBook().Published}}>
+
               </mat-form-field>
+              <div *ngIf="isError">
+
+              </div>
 
             </form>
+
           </div>
         </div>
 
@@ -41,6 +46,10 @@
         <div *ngIf="isSaved" class="alert alert-success mmesage">
             <strong>DONE</strong> DONE.
  </div>
+
+ <div *ngIf="isError" class="alert alert-danger mmesage">
+  <strong>not valid date </strong>.
+</div>
           <button type="button" class="btn btn-secondary
           " data-dismiss="modal" (click)="cancel()">Cancel</button>
           <button *ngIf="service.getflag()" type="button" class="btn btn-primary 
