--- a/src/app/new-book/new-book.component.html
+++ b/src/app/new-book/new-book.component.html
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="profileForm" #ngform  class="example-form">
+        <form [formGroup]="profileForm" #ngform class="example-form">
           <mat-form-field class="example-full-width">
             <input matInput placeholder="enter id " formControlName="id" required>
           </mat-form-field>
@@ -17,7 +17,7 @@
           </mat-form-field>
 
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="please enter title" formControlName="title"  required>
+            <input matInput placeholder="please enter title" formControlName="title" required>
           </mat-form-field>
 
           <mat-form-field class="example-full-width">
@@ -25,24 +25,25 @@
           </mat-form-field>
 
           <mat-form-field class="example-full-width">
-            <input type="date"  matInput placeholder="please enter Published" formControlName="Published" required>
+            <input type="date" matInput placeholder="please enter Published" formControlName="Published" required>
           </mat-form-field>
         </form>
       </div>
-      
-<div *ngIf="isSaved" class="alert alert-success mmesage">
-    <strong>DONE</strong> DONE.
-  </div><div *ngIf="isError" class="alert alert-danger mmesage  ">
-      <strong>Error</strong> Sorry this book name exsist!.
-    </div>
-    <div *ngIf="errormsg" class="alert alert-danger mmesage  ">
-      <strong>Error</strong> date not vslid!.
-    </div>
-    
-  
+
+      <div *ngIf="isSaved" class="alert alert-success mmesage">
+        <strong>DONE</strong> DONE.
+      </div>
+      <div *ngIf="isError" class="alert alert-danger mmesage  ">
+        <strong>Error</strong> Sorry this book name exsist!.
+      </div>
+      <div *ngIf="errormsg" class="alert alert-danger mmesage  ">
+        <strong>Error</strong> date not vslid,the date is biger then today.
+      </div>
+
+
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cancel()">Close</button>
-        <button type="button" [disabled]="!profileForm.valid"  (click)="saveBook(profileForm)" class="btn btn-primary">Save changes</button>
+        <button type="button" [disabled]="!profileForm.valid" (click)="saveBook(profileForm)" class="btn btn-primary">Save changes</button>
       </div>
 
     </div>
